--- a/src/main.css
+++ b/src/main.css
@@ -30,32 +30,35 @@ button.donut {
     margin-left: -12px;
     line-height: 7em;
     margin-bottom: 35px;
+    border-block-end-width: 9px;
+    box-sizing: border-box;
+    border: 15px solid;
 }
 
 .blue-donut {
-    background-color:blue;
+   color:blue;
 }
 
 .brown-donut {
-    background-color:brown;
+    color:brown;
 }
 
 .choc-donut {
-    background-color:rgb(83, 10, 10);
+    color:rgb(83, 10, 10);
 }
 
 .green-donut {
-    background-color:green;
+    color:green;
 }
 
 .light-pink-donut {
-    background-color:pink;
+    color:pink;
 }
 
 .pink-donut {
-    background-color:rgb(248, 24, 61);
+    color:rgb(248, 24, 61);
 }
 
 .yellow-donut {
-    background-color: yellow;
+    color: yellow;
 }
