tdd add dance class

--- a/src/main.css
+++ b/src/main.css
@@ -36,6 +36,11 @@ button.donut {
    color:blue;
 }
 
+.dancing {
+    transform: translateY(-15px);
+    transition-timing-function: ease-in-out;
+}
+
 .brown-donut {
     color:brown;
 }
